...
					onChangeText={onChangeText}
					onSubmit={submit}
					onDelete={deleteServerHistory}
					onPressServerHistory={onPressServerHistory}
				/>
				<Button
					title={I18n.t('Connect')}
					type='primary'
					onPress={submit}
					disabled={!workspaceUrl || connecting}
					loading={connecting}
					style={styles.connectButton}
					testID='new-server-view-button'
...
